--- a/src/404.md
+++ b/src/404.md
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="./theme/css/chrome.css">
+
 <div class="pageNotFound">
   <img src="https://github.com/user-attachments/assets/d8222221-ae23-4124-9a86-82ab005862a4" alt="404" />
   <p></p>Page not found:(</p>
