--- a/src/404.md
+++ b/src/404.md
@@ -2,7 +2,7 @@
 
 <div class="pageNotFound">
   <img src="https://github.com/user-attachments/assets/d8222221-ae23-4124-9a86-82ab005862a4" alt="404" />
-  <p></p>Page not found:(</p>
+  <p>Page not found:(</p>
   <div class="pageButtons">
     <button class="home">
       <p><a href="./foreword.md"><i class="fa fa-home" aria-hidden="true"></i> Home</a></p>
