--- a/src/404.md
+++ b/src/404.md
@@ -4,17 +4,21 @@
     justify-content: center;
   }
 
-  button {
-	  display: flex;
-	  justify-content: center;
+  .editPage, .breadcrumb {
+    visibility: hidden;
+  }
+	
+  .home, .nightly {
+    display: flex;
+    justify-content: center;
     border-radius: 10px;
     border: none;
-  	transition: .3s;
-	  margin-left: .5rem;
+    transition: .3s;
+    margin-left: .5rem;
     margin-right: .5rem;
   }
 
-  button:hover {
+  .home:hover, .nightly:hover {
     border-radius: 10px;
     transform: scale(1.025);
     transition: .3s;
@@ -34,7 +38,7 @@
       <p><a href="./foreword.md"><i class="fa fa-home" aria-hidden="true"></i> Home</a></p>
     </button>
     <button class="nightly">
-      <p><a href="./foreword.md"><i class="fa fa-moon-o" aria-hidden="true"></i> Nightly Version</a></p>
+      <p><a href="https://wiki.botdesignerdiscord.com/nightly/"><i class="fa fa-moon-o" aria-hidden="true"></i> Nightly Version</a></p>
     </button>
   </div>
 </div>
